# Machine-Failure-Prediction-with-MLflow-Tracking

./: README.md  app.py  mlflow.db  pyproject.toml
Notebooks/: preprocessing.ipynb  train.ipynb
