[project]
name = "machine-failure-prediction-with-mlflow-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "mlflow>=3.11.1",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "torch>=2.11.0",
    "uvicorn>=0.45.0",
]
